[gd_scene load_steps=10 format=3 uid="uid://b22vxaylrg4kf"]

[ext_resource type="Script" uid="uid://cguesh25wv16f" path="res://Scripts/ui/CaseHandlingOverlay.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b16guxdvdv7jw" path="res://Assets/Image Assets/IMG_0988.PNG" id="2_bg"]
[ext_resource type="Script" uid="uid://m321y3iloeml" path="res://Scripts/ui/DrawerTrackConfig.gd" id="2_track"]
[ext_resource type="Texture2D" uid="uid://tanwpingn3tv" path="res://Assets/Image Assets/IMG_0989.PNG" id="3_dhoku"]
[ext_resource type="Texture2D" uid="uid://d2cf7beqca5tl" path="res://Assets/Image Assets/IMG_0986.PNG" id="4_table_top"]
[ext_resource type="Texture2D" uid="uid://d16ulcx5boqpu" path="res://Assets/Image Assets/IMG_0987.PNG" id="5_case_file"]
[ext_resource type="Script" uid="uid://7y8uownd3eoc" path="res://Scripts/ui/DrawerDropZoneIndicator.gd" id="6_drop_zone"]
[ext_resource type="Script" uid="uid://cdnxsp0fy2q5j" path="res://Scripts/ui/DrawerBalanceGauge.gd" id="8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqjvh"]
bg_color = Color(0.2, 1, 0.2, 0.08)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2, 1, 0.2, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="CaseHandlingOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")
balance_yellow_threshold = null
balance_orange_threshold = null
balance_red_threshold = null
balance_jam_noise_rate = null
balance_red_slam_noise_bonus = null
balance_green_open_speed = null
balance_yellow_open_speed = null
balance_red_grip_loss_delay_s = null

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("5_case_file")

[node name="OpenDrawer" type="Sprite2D" parent="."]
position = Vector2(0, -655)
texture = ExtResource("3_dhoku")
script = ExtResource("2_track")
drawer_track_y_at_100_px = 655.0

[node name="TableTop" type="Sprite2D" parent="."]
texture = ExtResource("2_bg")

[node name="ClosedCaseFolder" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_table_top")

[node name="DropZoneIndicator" type="Panel" parent="."]
layout_mode = 0
offset_left = -397.055
offset_top = -1046.3201
offset_right = -60.475006
offset_bottom = -588.0901
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mqjvh")
script = ExtResource("6_drop_zone")
design_rect_px = Rect2(882.945, 328.68, 336.58, 458.23)

[node name="BalanceGauge" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1269.35
offset_top = -1459.03
offset_right = -789.35
offset_bottom = -1305.4
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("8")
design_rect_px = Rect2(970.65, 995.97, 480, 153.63)
yellow_threshold = null
orange_threshold = null
red_threshold = null
color_green = null
color_yellow = null
color_orange = null
color_red = null
